--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Infinite Craft</h1>
+            <h1>Infinite Craft | By Dem Studios</h1>
             <p class="tagline">Combine elements to create the universe! Discover Dem Studios secrets.</p>
             <div class="header-controls">
                 <button class="header-btn" id="export-btn">Export Data</button>
@@ -716,7 +716,7 @@
         </section>
         
         <footer>
-            <p>&copy; 2025 Dem Studios. All rights reserved.</p>
+            <p>&copy; 2025 Dem Studios. All rights reserved. The one by 14592 studios is a copy of ours.</p>
         </footer>
     </div>
 
