--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
     <div class="container">
         <header>
             <h1>Infinite Craft | By Dem Studios</h1>
-            <p class="tagline">Combine elements to create the universe! Discover Dem Studios secrets.</p>
+            <p class="tagline">Combine elements to create the universe! Discover Dem Studios secrets. Not the 14592 studios way.</p>
             <div class="header-controls">
                 <button class="header-btn" id="export-btn">Export Data</button>
                 <button class="header-btn" id="reset-btn">Reset Progress</button>
@@ -760,7 +760,7 @@
             
             // Dem Studios special combinations
             'Parrot+Dog': { name: 'Dem Studios', rarity: 'dem-studios', description: 'The legendary game development studio!' },
-            'Mud+Dog': { name: '14592 Studios', rarity: 'dem-studios', description: 'A mysterious studio with magical powers' },
+            'Mud+Dog': { name: '14592 Studios', rarity: 'dem-studios', description: 'A Copyrighted company who stole our game' },
             'Dem Studios+14592 Studios': { name: 'Ultimate Studio', rarity: 'dem-studios', description: 'The ultimate creative powerhouse' },
             'Dem Studios+Energy': { name: 'Game Engine', rarity: 'epic', description: 'The heart of interactive experiences' },
             'Game Engine+Creativity': { name: 'Video Game', rarity: 'legendary', description: 'Interactive digital entertainment' },
